# flui

./: .ai-factory.json  .claude_settings.json  .gitattributes  .gitignore  .lsp.json  .mcp.json  .taplo.toml  ACHIEVEMENTS.md  ACTION_EXPLANATION.md  ACTION_PLAN_PRE_1.0.md  AGENTS.md  ALIGN_IMPROVEMENTS.md  ARCHITECTURE_MIGRATION_REPORT.md  ARCHITECTURE_REFACTORING.md  ARITY_SYSTEM_DESIGN.md  BUILD.md  CANVAS_MIGRATION_GUIDE.md  CENTER_IMPROVEMENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COHERENCE_TEST_RESULTS.md  COMMIT_MSG_TMP.txt  CONTAINER_IMPROVEMENTS.md  CONTINUATION_SUMMARY.md  CONTRIBUTING.md  CURRENT_STATUS.md  Cargo.toml  Cargo.toml.old  DECORATED_BOX_IMPROVEMENTS.md  DEPENDENCY_ARCHITECTURE.md  ENUM_ARCHITECTURE_SUMMARY.md  ENUM_RENDEROBJECT_DESIGN.md  ENUM_WIDGET_DESIGN.md  ENUM_WIDGET_MIGRATION_PLAN.md  EXAMPLES.md  FEATURES.md  FINAL_REPORT.md  FLEX_IMPROVEMENTS.md  FLUI_RENDERING_MIGRATION_AUDIT.md  (+114 more)
crates/ flui-pipeline/: Cargo.toml
crates/ flui-pipeline/src/: error.rs
crates/flui-animation/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/flui-animation/benches/: animation_bench.rs
crates/flui-animation/docs/: ARCHITECTURE.md  PATTERNS.md  PERFORMANCE.md
crates/flui-animation/examples/: oklab_gradient.rs  smoothing_follow.rs
crates/flui-animation/src/: animation.rs  compound.rs  constant.rs  controller.rs  curve.rs  curved.rs  error.rs  ext.rs  lib.rs  proxy.rs  reverse.rs  simulation.rs  smoothing.rs  spring.rs  status.rs  switch.rs  tween.rs  tween_types.rs  vsync.rs
crates/flui-animation/tests/: derive_animatable.rs
crates/flui-app/: AGENTS.md  Cargo.toml  README.md
crates/flui-app/src/: debug.rs  lib.rs
crates/flui-app/tests/: runner_frame_ordering.rs  u15_runner_wiring.rs
crates/flui-assets/: AGENTS.md  Cargo.toml  README.md
crates/flui-assets/docs/: ARCHITECTURE.md  GUIDE.md  PERFORMANCE.md  README.md
crates/flui-assets/examples/: network_loader.rs
crates/flui-assets/src/: error.rs  lib.rs
crates/flui-assets/tests/: image_asset_integration.rs  image_bridge.rs
crates/flui-binding/: Cargo.toml  README.md
crates/flui-binding/src/: lib.rs
crates/flui-binding/tests/: async_driver.rs  controller_restart.rs  layout_builder_seam.rs  long_press_via_pump_frame.rs  main.rs  owner_scope.rs  post_frame_after_layout.rs  self_rescheduling_local_post_frame.rs
crates/flui-build/: AGENTS.md  Cargo.toml
crates/flui-build/examples/: progress_demo.rs
crates/flui-build/src/: android.rs  context_builder.rs  context_ext.rs  desktop.rs  error.rs  ios.rs  lib.rs  output_parser.rs  platform.rs  progress.rs  scaffold.rs  web.rs
crates/flui-cli/: AGENTS.md  Cargo.toml  README.md
crates/flui-cli/src/: config.rs  error.rs  main.rs  runner.rs  types.rs  utils.rs
crates/flui-cli/tests/: cli_completions.rs  cli_create.rs  cli_doctor.rs  cli_errors.rs  cli_platform.rs  main.rs
crates/flui-cupertino/: AGENTS.md  Cargo.toml
crates/flui-cupertino/src/: bottom_tab_bar.rs  button.rs  colors.rs  lib.rs  nav_bar.rs  page_scaffold.rs  route.rs  tab_scaffold.rs  text_theme.rs  theme.rs
crates/flui-devtools/: AGENTS.md  Cargo.toml  FEATURES.md
crates/flui-element/: Cargo.toml  README.md
crates/flui-engine/: AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/flui-foundation/: AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md
crates/flui-geometry/: AGENTS.md  Cargo.toml  README.md
crates/flui-hot-reload/: AGENTS.md  Cargo.toml  README.md
crates/flui-interaction/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/flui-layer/: AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md
crates/flui-localizations/: Cargo.toml
crates/flui-macros/: AGENTS.md  Cargo.toml  README.md
crates/flui-material/: AGENTS.md  Cargo.toml
crates/flui-objects/: Cargo.toml  README.md
crates/flui-painting/: AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md
crates/flui-pipeline/: Cargo.toml  README.md
crates/flui-platform/: AGENTS.md  ARCHITECTURE.md  CI_EXAMPLE.md  Cargo.toml  DEPENDENCY_RECOMMENDATIONS.md  IMPLEMENTATION_STATUS.md  MULTI_MONITOR.md  PHASE_7.6_COMPLETE.md  PHASE_7_COMPLETE.md  PHASE_8.5_COMPLETE.md  PHASE_8.6_COMPLETE.md  PHASE_8.7_COMPLETE.md  PHASE_8_COMPLETE.md  PLATFORM_IMPROVEMENTS_SUMMARY.md  README.md  build.rs
crates/flui-reactivity/: AGENTS.md  BENCHMARK_RESULTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/flui-rendering/: AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  flutter-rendering-hierarchy.md
crates/flui-scheduler/: AGENTS.md  CHANGELOG.md  Cargo.toml  INTEGRATION.md  INTEGRATION_GUIDE.md  README.md
crates/flui-semantics/: AGENTS.md  Cargo.toml  README.md
old_version_standalone/: ARCHITECTURE_PROGRESS.md  ARCHITECTURE_ROADMAP.md  COMPLETE_WIDGET_ROADMAP.md  CONTAINER_COMPLETION.md  Cargo.toml  FRAMEWORK_IMPLEMENTATION.md  MIGRATION.md  README.md  TEXT_WIDGET_COMPLETE.md  TYPES_REFACTORING_COMPLETE.md  TYPES_UPDATE_SUMMARY.md  WIDGET_HIERARCHY.md  WIDGET_IMPLEMENTATION_PLAN.md
old_version_standalone/docs/: BON_CUSTOM_FINISHING_FUNCTIONS.md  BON_EVALUATION.md  BON_PRACTICAL_EXAMPLE.md  CONTAINER_FACTORY_METHODS.md  CONVENIENT_EXPORTS.md  ENHANCED_WIDGET_TRAIT.md  FINAL_DECISION_BON.md  FINAL_THREE_SYNTAX_PLAN.md  ROTATION_IMPLEMENTATION.md  SESSION_SUMMARY_THREE_SYNTAX.md  SIZE_HINT_QUICK_START.md  STATEFUL_WIDGETS.md  TEXT_WIDGET_GUIDE.md  THREE_SYNTAX_IMPLEMENTATION_COMPLETE.md  THREE_SYNTAX_STYLES.md  TRANSFORM_RENDERING_NOTES.md  TRANSFORM_SYSTEM_SUMMARY.md  WIDGET_CONTROLLER_QUICK_REF.md  WIDGET_TRAIT_SIZE_HINT.md  WIDGET_VS_CONTROLLER.md  WITH_METHODS_REMOVED.md  WRITING_WIDGETS_AND_CONTROLLERS.md
old_version_standalone/examples/: README.md  bon_child_setter.rs  container_features.rs  container_rotation.rs  container_transform_full.rs  demo.rs  finishing_functions.rs  framework_demo.rs  import_styles.rs  layer_transform_test.rs  mod.rs  prelude_demo.rs  rich_text_demo.rs  shadow_demo.rs  size_hint_demo.rs  text_demo.rs  three_syntax_styles.rs
old_version_standalone/src/: lib.rs
xtask/: Cargo.toml  README.md
xtask/src/: main.rs
(+4325 files in other folders)
