[workspace]
resolver = "2"
members = [
    # === Phase 1: Foundation Layer ===
    "crates/flui-geometry",   # Geometry primitives (split from flui-types in D-block PR-C-2)
    "crates/flui-types",      # Base types with Unit system (ACTIVE)
    "crates/flui-foundation", # Foundation types and utilities (ACTIVE)
    "crates/flui-macros",     # Proc-macros (skeleton — derives land in Phase 3 §U23)
    "crates/flui-tree",       # Tree abstractions (ACTIVE)
    "crates/flui-platform",   # Platform abstraction (ACTIVE)

    # === Phase 2: Core Framework ===
    "crates/flui-painting",    # Painting primitives (ACTIVE)
    "crates/flui-semantics",   # Accessibility (ACTIVE)
    "crates/flui-scheduler",   # Frame scheduling (ACTIVE)
    "crates/flui-layer",       # Layer composition (ACTIVE)
    "crates/flui-interaction", # Gesture recognition (ACTIVE)
    "crates/flui-engine",      # GPU rendering engine (ACTIVE)
    "crates/flui-hot-reload",  # Hot-reload scene plugins via dlopen (ACTIVE)

    # === Phase 3: Framework Layer ===
    "crates/flui-rendering", # Render tree (ACTIVE)
    "crates/flui-view",      # View/Element tree (ACTIVE)

    # === Phase 4: Application Layer ===
    "crates/flui-app", # Application framework (ACTIVE - Migration)

    # === Examples (platform-specific) ===
    # NOTE: Android examples are excluded from workspace.members because they
    # require Android NDK toolchain. Build them with:
    #   cargo ndk -t arm64-v8a build -p flui-android-demo
    # "examples/android_demo",      # Android GPU demo (cdylib)
    # "examples/android_scene",     # Hot-reloadable scene plugin (cdylib)
    # "examples/android_app",       # Widget-based hot-reloadable plugin (cdylib)
    "examples/desktop_scene", # Hot-reloadable scene plugin for desktop — loaded via HotReloadDriver

    # NOTE: Web examples are excluded from default workspace members because they
    # require wasm32 target. Build with:
    #   cd examples/web_demo && wasm-pack build --target web --out-dir pkg
    "examples/web_demo",      # Web/WASM platform demo (cdylib)
    "examples/painting_demo", # Web/WASM painting + engine demo (cdylib)

    # === Tools ===
    "tools/web-server", # Built-in web dev server (wasm-pack + HTTP serve)

    # === Animation Layer ===
    "crates/flui-animation", # Animation system (ACTIVE)
    # "crates/flui-reactivity",
    # "crates/flui-devtools",
    # "crates/flui-cli",
    # "crates/flui-build",
]

# Default members exclude Android-only crates (ndk-sys won't compile on host)
default-members = [
    "crates/flui-geometry",
    "crates/flui-types",
    "crates/flui-foundation",
    "crates/flui-macros",
    "crates/flui-tree",
    "crates/flui-platform",
    "crates/flui-painting",
    "crates/flui-semantics",
    "crates/flui-scheduler",
    "crates/flui-layer",
    "crates/flui-interaction",
    "crates/flui-engine",
    "crates/flui-hot-reload",
    "crates/flui-rendering",
    "crates/flui-view",
    "crates/flui-app",
    "crates/flui-animation",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "MIT OR Apache-2.0"
authors = ["Flui Contributors"]
repository = "https://github.com/vanyastaff/flui"

[workspace.dependencies]
# ASYNC RUNTIME — tokio 1.43 = LTS floor (lock resolves latest 1.x)
tokio = { version = "1.43" }

# SYNCHRONIZATION - Used by multiple crates
parking_lot = "0.12"
once_cell = "1.20"
dashmap = "6.1"

# COLLECTIONS - Used by multiple crates
smallvec = { version = "1.13", features = ["serde", "union", "const_generics"] }

# SERIALIZATION - Core functionality
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

# BUILDER UTILITIES - Used by widgets
bon = "3.8"

# WORKSPACE PROC-MACROS
flui-macros = { path = "crates/flui-macros" }

# ERROR HANDLING & LOGGING - Used everywhere
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
tracing-forest = { version = "0.3", features = ["smallvec"] }

# === Shared GPU/Window dependencies ===
# Used by flui-engine, flui-app, and root examples
# GPU RENDERING (WGPU BACKEND) - Track latest stable (29.x).
# Update policy: bump within the same minor on security/bug fixes; bump major after
# verifying API migration on a dedicated branch (see docs/adr/ADR-0002).
wgpu = { version = "29.0", default-features = false, features = ["wgsl"] }
# GPU profiling — optional, reused by flui-engine behind the `gpu-profiler` feature.
# Pins wgpu ^29.0, consistent with the workspace pin above. Excluded from wasm32.
wgpu-profiler = { version = "0.27", default-features = false }
winit = "0.30.12"
raw-window-handle = "0.6"
pollster = "0.4"

# CLIPBOARD - Cross-platform clipboard access
arboard = "3.4"

# IMAGE PROCESSING - Used by flui-assets and flui-engine
# TODO: Re-enable "webp" feature when image-rs/image-webp#102 is fixed upstream
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }

# === Engine-specific dependencies (NOT in workspace) ===
# These are ONLY used in flui-engine:
# - glam (GPU math)
# - glyphon, cosmic-text (text rendering)
# - lyon (tessellation)
# - guillotiere (texture atlas)
# - bytemuck

# CACHING - Used by flui_core and flui-assets
moka = { version = "0.12", features = ["future"] }

# NETWORKING - Used by flui-assets
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }

# UI EVENTS - Cross-platform input event abstraction (W3C compliant)
ui-events = "0.3"
cursor-icon = "1.2"

# UTILITIES - Used by multiple crates
bitflags = "2.10"
dyn-clone = "1.0"
downcast-rs = "2.0.2"

# FAST HASHING - Used by flui-rendering (FxHashSet for layout cycle guard
# per D-block U21; deterministic + faster than std SipHash for small keys
# like RenderId)
rustc-hash = "2.1"

# STRING INTERNING - Used by flui-assets
lasso = { version = "0.7", features = ["multi-threaded"] }

# PERFORMANCE & PROFILING
criterion = "0.7"

# SNAPSHOT TESTING - render-harness paint-phase (sub-project A) and any crate
# that needs deterministic output assertions. Test-only; not compiled in release.
insta = "1"

# Workspace-wide lints for consistent code quality (Rust 1.74+)
[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"
missing_debug_implementations = "warn"
rust_2018_idioms = "warn"

[workspace.lints.clippy]
# Lint groups need lower priority to allow individual lint overrides
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow reasonable exceptions
cast_precision_loss = "allow"
module_name_repetitions = "allow"
too_many_lines = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
doc_markdown = "allow"

[package]
name = "flui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Flutter-inspired declarative UI framework with wgpu rendering"
keywords = ["gui", "ui", "wgpu", "flutter", "reactive"]

[dependencies]

[dev-dependencies]
# === Foundation Layer ===
flui-types = { path = "crates/flui-types" }
flui-foundation = { path = "crates/flui-foundation" } # HasInstance/Listenable in animated_box_app
# flui-tree = { path = "crates/flui-tree" }

# === Core Layer ===
flui-layer = { path = "crates/flui-layer" }
flui-painting = { path = "crates/flui-painting" }
# === Rendering Layer (colored_box_app / animated_box_app examples) ===
flui-rendering = { path = "crates/flui-rendering" }

# === View Layer ===
flui-view = { path = "crates/flui-view" }

# === Reactive Layer (animated_box_app example) ===
flui-scheduler = { path = "crates/flui-scheduler" }
flui-animation = { path = "crates/flui-animation" }

# === Application Layer ===
flui-app = { path = "crates/flui-app" }

# === Platform Layer (for examples) ===
flui-platform = { path = "crates/flui-platform" }

# === Hot-Reload (for examples) ===
flui-hot-reload = { path = "crates/flui-hot-reload" }

# === Engine Layer (for GPU examples) ===
flui-engine = { path = "crates/flui-engine", features = ["dx12"] }
pollster = { workspace = true }
wgpu = { workspace = true }
raw-window-handle.workspace = true

# === Error Handling (for examples) ===
anyhow.workspace = true

# === Image decoding (image_demo example) ===
image.workspace = true

# === Logging ===
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
default = []

# === Core Features ===
# Serialization support across all crates
serde = [
    # "flui_core/serde",  # Temporarily disabled
    "flui-types/serde",
    # "flui-rendering/serde",  # Temporarily disabled
]

# === Performance Features ===
# Multi-threaded parallel processing (temporarily disabled)
# parallel = ["flui_core/parallel"]

# === Profiling & Debug Features ===
# TODO: Fix puffin dependencies before enabling
# profiling = ["puffin", "puffin_http", "flui_core/profiling"]
# tracy = ["tracing-tracy"]
# full-profiling = ["profiling", "tracy"]

# === DevTools Features ===
# Developer tools integration (temporarily disabled)
# devtools = ["flui-engine/devtools"]

# TODO: Re-enable when memory-profiler dependencies are fixed
# memory-profiler = ["devtools", "flui-engine/memory-profiler"]

# === Convenience Features ===
# Enable all stable features (temporarily disabled)
# full = ["serde", "parallel", "devtools"]

# ═══════════════════════════════════════════════════════════════════════════════
# Build Profiles
# ═══════════════════════════════════════════════════════════════════════════════

[profile.dev]
opt-level = 1      # Some optimization for faster runtime
incremental = true # Faster rebuilds
# `debug = 1` ("limited") keeps file:line in panic backtraces AND variable/scope
# info for a step-debugger, but drops the DWARF/CodeView *type* info that full
# `debug = 2` (cargo's dev default) emits. On this wgpu/cosmic-text/lyon/naga
# workspace that embedded type info is the bulk of the per-crate artifact size
# in `target/debug/deps`. Same trade-off Zed/gpui ships as its default dev
# profile. When you need complete type info in the debugger, build `--profile dbg`.
debug = 1

[profile.dev.package."*"]
opt-level = 2 # Optimize dependencies (they don't change often)

# Opt-in full-debuginfo profile. Inherits `dev` but restores `debug = 2` so a
# step-debugger (RustRover / lldb / gdb) sees complete type info. Use sparingly —
# it re-inflates `target/`: `cargo build --profile dbg`, `cargo test --profile dbg`.
[profile.dbg]
inherits = "dev"
debug = "full"

[profile.release]
opt-level = 3
lto = "thin"      # Link-time optimization (good balance)
codegen-units = 1 # Better optimization, slower compile
strip = "symbols" # Smaller binary
